fixing spacing in contact name

--- a/client/main.css
+++ b/client/main.css
@@ -136,3 +136,6 @@ input.firstN,input.lastN{
   float:left;
   clear: both;
 }
+.text{
+  padding-left:4px;
+}
